created paginated search for property
