# app/src/test/resources/openapi-test.json
@@ -15,6 +15,29 @@
       "get" : {
         "summary" : "Get all properties",
         "operationId" : "getProperties",
+        "parameters" : [ {
+          "name" : "_limit",
+          "in" : "query",
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32",
+            "default" : 10
+          }
+        }, {
+          "name" : "_offset",
+          "in" : "query",
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32",
+            "default" : 0
+          }
+        }, {
+          "name" : "_sort",
+          "in" : "query",
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
         "responses" : {
           "200" : {
             "description" : "Return a list of properties",
@@ -28,6 +51,9 @@
                 }
               }
             }
+          },
+          "204" : {
+            "description" : "empty list"
           }
         }
       },
